--- a/src/styles.css
+++ b/src/styles.css
@@ -267,6 +267,28 @@
   border-radius: 10px;
 }
 
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: -5px !important;
+}
+
+.green-border {
+  border-top: 2px solid #48b2aa;
+}
+
+footer {
+  background-color: #4f397d;
+  color: #ffffff;
+  text-align: center;
+}
+
+.btn-enviar {
+  padding: 8px 12px;
+  min-width: 150px;
+}
+
 @media (max-width: 575.98px) {
   .first-title {
     font-size: 18px;
@@ -331,6 +353,41 @@
     font-size: 24px;
     line-height: 24px;
     margin-top: 30px;
+  }
+
+  .main-banner {
+    box-shadow: none;
+  }
+
+  .bg-yellow {
+    background-color: #ffffff;
+  }
+
+  .banner-title {
+    font-size: 22px;
+  }
+
+  .banner-subtitle {
+    font-size: 14px;
+  }
+
+  .btn-buy {
+    font-size: 14px;
+    line-height: 24px;
+    min-width: 160px;
+    padding: 10px 0 10px;
+  }
+
+  .btn-buy:hover {
+    background-color: #2aa69c;
+    color: #ffffff;
+  }
+
+  .btn-play {
+    font-size: 14px;
+    line-height: 24px;
+    min-width: 160px;
+    padding: 10px 0 10px;
   }
 }
 
