--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,10 @@
   background-color: #4f397d;
 }
 
+.bg-product {
+  background-color: #c5d8e2;
+}
+
 .banner-title {
   color: #000000;
   font-family: Karla, sans-serif;
